WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268263
PAL::ErrorCallbackSetter has two uninitialized fields when m_shouldStopOnEncodingErrors is false
https://bugs.webkit.org/show_bug.cgi?id=268263
Summary
PAL::ErrorCallbackSetter has two uninitialized fields when m_shouldStopOnEnco...
David Kilzer (:ddkilzer)
Reported
2024-01-28 12:29:05 PST
PAL::ErrorCallbackSetter has two uninitialized fields when m_shouldStopOnEncodingErrors is false. Found by clang static analyzer. Regressed in: XML documents should be strict about encoding checks
http://bugs.webkit.org/show_bug.cgi?id=17079
https://commits.webkit.org/24982@main
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-28 12:29:21 PST
<
rdar://problem/121815500
>
David Kilzer (:ddkilzer)
Comment 2
2024-01-28 12:31:55 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23393
EWS
Comment 3
2024-01-29 09:52:20 PST
Committed
273666@main
(cad16f474d3f): <
https://commits.webkit.org/273666@main
> Reviewed commits have been landed. Closing PR #23393 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug