PAL::ErrorCallbackSetter has two uninitialized fields when m_shouldStopOnEncodingErrors is false https://bugs.webkit.org/show_bug.cgi?id=268263 <rdar://121815500>

Reviewed by Alex Christensen.

* Source/WebCore/PAL/pal/text/TextCodecICU.cpp:
(PAL::ErrorCallbackSetter):
- Initialize m_savedContext and m_savedAction to nullptr.

Canonical link: https://commits.webkit.org/273666@main